--- a/web/html/xui/component/inbound_info.html
+++ b/web/html/xui/component/inbound_info.html
@@ -10,14 +10,14 @@
 </template>
 
 <template v-if="inbound.isQuic">
-    <p>quic 加密: <a-tag color="green">[[ inbound.quicSecurity ]]</a-tag></p>
-    <p>quic 密码: <a-tag color="green">[[ inbound.quicKey ]]</a-tag></p>
-    <p>quic 伪装: <a-tag color="green">[[ inbound.quicType ]]</a-tag></p>
+    <p>quic encryption: <a-tag color="green">[[ inbound.quicSecurity ]]</a-tag></p>
+    <p>quic password: <a-tag color="green">[[ inbound.quicKey ]]</a-tag></p>
+    <p>quic camouflage: <a-tag color="green">[[ inbound.quicType ]]</a-tag></p>
 </template>
 
 <template v-if="inbound.isKcp">
-    <p>kcp 加密: <a-tag color="green">[[ inbound.kcpType ]]</a-tag></p>
-    <p>kcp 密码: <a-tag color="green">[[ inbound.kcpSeed ]]</a-tag></p>
+    <p>kcp encryption: <a-tag color="green">[[ inbound.kcpType ]]</a-tag></p>
+    <p>kcp password: <a-tag color="green">[[ inbound.kcpSeed ]]</a-tag></p>
 </template>
 
 <template v-if="inbound.isGrpc">
@@ -32,10 +32,10 @@
     <p>tls: <a-tag color="red">关闭</a-tag></p>
 </template>
 <p v-if="inbound.tls">
-    tls域名: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
+    tlsdomain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
 </p>
 <p v-if="inbound.xtls">
-    xtls域名: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
+    xtlsdomain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
 </p>
 {{end}}
 
@@ -57,22 +57,22 @@
     </template>
 
     <template v-if="dbInbound.isTrojan">
-        <p>密码: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
+        <p>password: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
     </template>
 
     <template v-if="dbInbound.isSS">
-        <p>加密: <a-tag color="green">[[ inbound.method ]]</a-tag></p>
-        <p>密码: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
+        <p>encryption: <a-tag color="green">[[ inbound.method ]]</a-tag></p>
+        <p>password: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
     </template>
 
     <template v-if="dbInbound.isSocks">
         <p>用户名: <a-tag color="green">[[ inbound.username ]]</a-tag></p>
-        <p>密码: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
+        <p>password: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
     </template>
 
     <template v-if="dbInbound.isHTTP">
         <p>用户名: <a-tag color="green">[[ inbound.username ]]</a-tag></p>
-        <p>密码: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
+        <p>password: <a-tag color="green">[[ inbound.password ]]</a-tag></p>
     </template>
 
     <template v-if="dbInbound.isVMess || dbInbound.isVLess || dbInbound.isTrojan || dbInbound.isSS">
