--- a/web/html/xui/component/inbound_info.html
+++ b/web/html/xui/component/inbound_info.html
@@ -1,12 +1,12 @@
 {{define "inboundInfoStream"}}
-<p>传输: <a-tag color="green">[[ inbound.network ]]</a-tag></p>
+<p>Delivery: <a-tag color="green">[[ inbound.network ]]</a-tag></p>
 
 <template v-if="inbound.isTcp || inbound.isWs || inbound.isH2">
     <p v-if="inbound.host">host: <a-tag color="green">[[ inbound.host ]]</a-tag></p>
-    <p v-else>host: <a-tag color="orange">无</a-tag></p>
+    <p v-else>host: <a-tag color="orange">without</a-tag></p>
 
     <p v-if="inbound.path">path: <a-tag color="green">[[ inbound.path ]]</a-tag></p>
-    <p v-else>path: <a-tag color="orange">无</a-tag></p>
+    <p v-else>path: <a-tag color="orange">without</a-tag></p>
 </template>
 
 <template v-if="inbound.isQuic">
@@ -32,10 +32,10 @@
     <p>tls: <a-tag color="red">Close</a-tag></p>
 </template>
 <p v-if="inbound.tls">
-    tlsdomain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
+    tls domain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "without" ]]</a-tag>
 </p>
 <p v-if="inbound.xtls">
-    xtlsdomain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "无" ]]</a-tag>
+    xtls domain name: <a-tag :color="inbound.serverName ? 'green' : 'orange'">[[ inbound.serverName ? inbound.serverName : "without" ]]</a-tag>
 </p>
 {{end}}
 
